# qqq-systematic-signal-research

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md  sample_prices.csv
figures/: README.md
notebooks/: 01_project_report.ipynb  README.md
reports/: final_project_report.md  one_page_project_summary.md  original_challenge_summary.md  qqq_project_explainer.tex  research_decisions.md
reports/original_challenge_evidence/: README.md
results/: README.md  component_attribution_summary.csv  cost_sensitivity.csv  ensemble_component_contributions.csv  exposure_state_summary.csv  final_performance_summary.csv  holdout_bootstrap_summary.csv  model_selection_summary.csv  original_challenge_cost_sensitivity.csv  original_challenge_performance_summary.csv  original_challenge_signal_family_results.csv  parameter_sensitivity.csv  public_data_split.csv  regime_summary.csv  selected_signal_component_exposures.csv  signal_family_results.csv  walkforward_performance.csv  walkforward_selection.csv
src/: __init__.py  attribution.py  backtest.py  build_reports.py  config.py  data_loader.py  features.py  generate_research_artifacts.py  inference.py  make_plots.py  metrics.py  plots.py  regime.py  run_backtest.py  signals.py  validation.py  walkforward.py
tests/: test_data_loader.py  test_metrics.py  test_pipeline.py  test_research_extensions.py
